networking.k8s.io-v1beta1/demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-app
  namespace: demo
spec:
  template:
    metadata:
      name: busybox
      labels:
        app: busybox-web-bundle
    spec:
      containers:
      - name: helloapp
        image: busybox
        command: ["/bin/sh", "-c"]
        args:
        - "echo '<html> <head> <link href=https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap rel=stylesheet> </head> <style>body{text-align: center; padding: 40px 0; background: #EBF0F5;}h1{color: #88B04B; font-family: Nunito Sans, Helvetica Neue, sans-serif; font-weight: 900; font-size: 40px; margin-bottom: 10px;}p{color: #404F5E; font-family: Nunito Sans, Helvetica Neue, sans-serif; font-size:20px; margin: 0;}i{color: #9ABC66; font-size: 100px; line-height: 200px [...]
      - name: greetingsapp
        image: busybox
        command: ["/bin/sh", "-c"]
        args:
        - "echo '<html> <head> <link href=https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap rel=stylesheet> </head> <style>body{text-align: center; padding: 40px 0; background: #EBF0F5;}h1{color: #88B04B; font-family: Nunito Sans, Helvetica Neue, sans-serif; font-weight: 900; font-size: 40px; margin-bottom: 10px;}p{color: #404F5E; font-family: Nunito Sans, Helvetica Neue, sans-serif; font-size:20px; margin: 0;}i{color: #9ABC66; font-size: 100px; line-height: 200px [...]
      - name: backendapp
        image: busybox
        command: ["/bin/sh", "-c"]
        args:
        - "echo '<html> <head> <link href=https://fonts.googleapis.com/css?family=Nunito+Sans:400,400i,700,900&display=swap rel=stylesheet> </head> <style>body{text-align: center; padding: 40px 0; background: #EBF0F5;}h1{color: #88B04B; font-family: Nunito Sans, Helvetica Neue, sans-serif; font-weight: 900; font-size: 40px; margin-bottom: 10px;}p{color: #404F5E; font-family: Nunito Sans, Helvetica Neue, sans-serif; font-size:20px; margin: 0;}i{color: #9ABC66; font-size: 100px; line-height: 200px [...]
  replicas: 2
  selector:
    matchLabels:
      app: busybox-web-bundle # 🔑
---
apiVersion: v1
kind: Service
metadata:
  name: web-app
  namespace: demo
spec:
  type: ClusterIP
  ports:
  - name: hello
    port: 8080
    targetPort: 8280
  - name: greetings
    port: 8081
    targetPort: 8380
  selector:
    app: busybox-web-bundle
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  namespace: demo
spec:
  type: ClusterIP
  ports:
  - name: hello
    port: 80
    targetPort: 8404
  selector:
    app: busybox-web-bundle
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  namespace: demo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  backend:
    serviceName: default-backend
    servicePort: 80
  rules:
  - host: "demo.cloud.example.com"
    http:
      paths:
      - path: "/left"
        backend:
          serviceName: web-app
          servicePort: 8080
      - path: "/right"
        backend:
          serviceName: web-app
          servicePort: 8081
